<resources>
    <string name="app_name">Ribbit</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Sign in</string>
    <string name="sign_up_text">Dont\'t have an account? Sign Up!</string>
    <string name="email_Field">Email Adress</string>
    <string name="login_error_title">Oops!</string>
    <string name="title_activity_test">testActivity</string>
    <string name="action_settings">Settings</string>
    <string name="logout_activity">Logout</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="no_messages">No messages to display :(</string>
    <string name="add_friends">Huh? It\'s pretty empty here</string>
    <string name="title_activity_tab_testing">tabTesting</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_toast">Oops, there was an error!</string>
    <string name="external_storage_access_error">There was a problem with accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="problem_with_file">There was a problem with the selected file.</string>
    <string name="too_large_file">Selected file is too large. Please select a file smaller than 10 MB.</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipents">Recipents</string>
    <string name="title_activity_edit_friends_activty">Edit Friends</string>
    <string name="title_activity_recipients2">RecipientsActivity2</string>
    <string name="no_recipients">You should add some friends first</string>
    <string name="error_selecting_file">Oops! There was a problem with selected file. Please select another file</string>
    <string name="title_selecting_file_title">We are sorry!</string>
    <string name="success_message">Message sent</string>
    <string name="error_sending_message">There was an error with sending your message, please try again</string>

    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="content_desc_background_image">Ribbit Frog Background Image</string>
    <string name="subtitile">A Treehouse Project</string>
    <string name="sign_up_label">SIGN UP</string>
    <string name="cancel_label">CANCEL</string>
    <string name="button_divider">Button Divider</string>
    <string name="title_activity_edit_friends2">EditFriendsActivity2</string>
    <string name="empty_friends_label">Huh? It\'s pretty empty here</string>
    <string name="error_title">Sorry!</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>
</resources>
