<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.kosewski.bartosz.ribbit.UI.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:text="@string/app_name"
        android:id="@+id/title"

        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/subtitile"
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">
            <requestFocus/>
            </EditText>


        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:ems="10"
            style="@style/AuthEditText"
           />
    </LinearLayout>

    <requestFocus/>

    <Button
        android:text="@string/log_in_button"
        android:id="@+id/loginButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignLeft="@+id/backgroundImage"
        style="@style/AuthButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"

        />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
